<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="8dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/insert_app_label"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/item_name_edit_box"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/item_name_edit_box"
            android:layout_marginRight="10dp"
            android:text="@string/item_name_label"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textAlignment="center" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/item_desc_edit_box"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/item_desc_edit_box"
            android:layout_marginRight="10dp"
            android:text="@string/description_label"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textAlignment="center" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/item_price_edit_box"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/item_price_edit_box"
            android:layout_marginRight="10dp"
            android:text="@string/price_label"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textAlignment="center" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/item_review_edit_box"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="21sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/item_review_edit_box"
            android:layout_marginRight="10dp"
            android:text="@string/review_label"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textAlignment="center" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="120dp"
        android:paddingBottom="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">
        <Button
            android:id="@+id/add_btn"
            android:layout_width="100sp"
            android:layout_height="60sp"
            android:background="@drawable/rounded_button_shape"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/btn_add_label"
            android:textAllCaps="false"
            android:onClick="saveInDB"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="100sp"
            android:layout_height="60sp"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_button_shape"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/btn_cancel_label"
            android:textAllCaps="false"
            android:onClick="cancelInsert"/>
    </RelativeLayout>



</LinearLayout>
