<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/activity_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:text="@string/app_label"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
    <Button
        android:id="@+id/btn_insert"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button_shape"
        android:backgroundTint="@color/red"
        android:text="@string/btn_insert_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:onClick="insert" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="5dp">
        <Button
            android:id="@+id/btn_search"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_shape"
            android:backgroundTint="@color/purple"
            android:textAllCaps="false"
            android:text="@string/btn_search_label"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:onClick="search" />
    </RelativeLayout>
</LinearLayout>
