<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="8dip">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">
        <TextView
            android:id="@+id/activity_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_app_label"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textAlignment="center" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp">
        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="25dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">
        <Button
            android:id="@+id/search_btn"
            android:layout_width="140sp"
            android:layout_height="60sp"
            android:background="@drawable/rounded_button_shape"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@string/btn_search1_label"
            android:textAllCaps="false"
            android:onClick="retrieveFromDB"/>
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="140sp"
            android:layout_height="60sp"
            android:layout_alignParentRight="true"
            android:background="@drawable/rounded_button_shape"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@string/btn_cancel_label"
            android:textAllCaps="false"
            android:onClick="cancelSearch"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/searchResult_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:padding="4dip"
                android:typeface="monospace"
                />
        </ScrollView>
    </RelativeLayout>

</LinearLayout>
